--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item
         android:id="@+id/action_inbox"
-        android:icon="@mipmap/ic_inbox_white"
+        android:icon="@drawable/ic_inbox_white"
         android:title="Inbox"
         app:showAsAction="always" />
 </menu>
